fix Add Note spacing on custom inputs

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -36,6 +36,10 @@ p {
 
 }
 
+.custom-select {
+    margin: .5rem 0rem;
+}
+
 .btn {
     margin-left: 0px;
 }
